Fix time/hour field wrapping/misalignment

--- a/client/blocks/plugins-update-manager/schedule-form.scss
+++ b/client/blocks/plugins-update-manager/schedule-form.scss
@@ -130,6 +130,11 @@
 		}
 	}
 
+	// Change flex to block on mobile to prevent the hour/minute field from wrapping
+	.is-mobile {
+		display: block;
+	}
+
 	.time-controls {
 		& > div {
 			display: inline-block;
